--- a/cfg/data/taobao.yml
+++ b/cfg/data/taobao.yml
@@ -1,8 +1,8 @@
 data_dir: data/Taobao_x1
 train_data: train.csv
 test_data: test.csv
+process_dir: features
 chunksize: 1000000
-h5: True
 sep: ','
 feature_cols:
  - {name: [userid,adgroup_id,pid,cate_id,campaign_id,customer,brand,cms_segid,
